Added final conclusions, Can be changed.

--- a/Week2/SVM.ipynb
+++ b/Week2/SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
    "source": [
     "Conclusion:\n",
     "    \n",
-    "In this graph we can appreciate that using now more clusters helps the SVM to increase the accuracy from 81.16% to more than 86% (86.74% to be exacts) which is great. Until this point we have been using the default parameters of the SVM which are:\n",
+    "In this graph we can appreciate that using now more clusters helps the SVM to increase the accuracy from 81.16% to more than 86% (86.74% to be exact) which is great. Until this point we have been using the default parameters of the SVM which are:\n",
     "\n",
     "1. C -- (Regularization parameter): 1\n",
     "2. kernel -- (Specifies the kernel): RBF\n",
@@ -496,7 +496,7 @@
    "source": [
     "Conclusions: \n",
     "\n",
-    "Observing this graph we can see that the L1 normalization seems to work better than the other normalizations. However, we see a significant drop in performance compared with previous test. We have to be careful because this test has been computed using the vanilla SVM, so maybe adjusting the SVM we achieve to imporve the results, so from here L1 normalization will be applied."
+    "Observing this graph we can see that the L1 normalization seems to work better than the other normalizations. However, we see a significant drop in performance compared with previous test. We have to be careful because this test has been computed using the vanilla SVM, so maybe adjusting the SVM we achieve to improve the results, so from here L1 normalization will be applied."
    ]
   },
   {
@@ -667,7 +667,9 @@
    "source": [
     "Seeing this graph we can see that 'rbf' is the only one that works slighty worst than the others. We also see that using sigmoid, th SVM tend to not overfit as much as when other kernels are used.\n",
     "\n",
-    "For the following test, we will stay with sigmoid and histogram_intersection as both seem to work well and achieve accuracies around 0.86%"
+    "For the following test, we will stay with sigmoid and histogram_intersection as both seem to work well and achieve accuracies around 86%\n",
+    "\n",
+    "We need to remark that when using histogram_intersection, the parameter gamma is not used."
    ]
   },
   {
@@ -818,7 +820,7 @@
    "source": [
     "So far we have tried try different ways of computing the data and finetune the SVM. This time we want to change if applying apyramidal structure on the data could imporve our results of what we have seen.\n",
     "\n",
-    "The implementation of the Pyramid Dense SIFT computes the SIFT descriptors in subparts of the image. So we divide the image in equal parts and then compute the DenseSIFT on each part. We consider that 4 parts is great, as more than that could generate to much descriptors distorting the results.\n",
+    "The implementation of the Pyramid Dense SIFT computes the SIFT descriptors in subparts of the image. So we divide the image in equal parts and then compute the DenseSIFT on each part. We consider that 4 parts is enough, as more than that, could generate to much descriptors distorting the results.\n",
     "\n",
     "For this experiment we study again how many clusters the VisualWords needs (Which has to be changed due to the change on the descriptors). We are interested in testing if the pyramidal SIFT changes the previous parameters."
    ]
@@ -997,36 +999,208 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are still very intrigued about if it is possible to reach precisions higher than 90%, that's why we have installed the yael library and tried the fisher vectors.\n",
+    "We are still very intrigued about if it is possible to reach precisions higher than 90%, that's why we have installed the yael library and tried the fisher vectors. For this reason here there are the correspondance imports using python2 that our code needs to compute the fisher vectors. \n",
     "\n",
-    "Instead of computing the data using the bag of visual words, many papers suggest that fisher vectors work at state of art precision. Fisher vectors are inspired by useing Gaussian Mixture Models and approximate the probability density of the data.\n",
+    "Instead of computing the data using the bag of visual words, many papers suggest that fisher vectors work at state of art precision. Fisher vectors are used a lot in Computer Vision and can be used to describe an entire image for image classification. Are inspired by using Gaussian Mixture Models and approximate the probability density of the data.\n",
     "\n",
-    "We will then pass this data through the SVM and see if the results are better or worst. We i"
+    "1. A Gaussian Mixture Model (GMM) is used to model the distribution of features (e.g. SIFT) extracted all over the image\n",
+    "2. The Fisher Vector (FV) encodes the gradients of the log-likelihood of the features under the GMM, with respect to the GMM parameters.\n",
+    "\n",
+    "Since the GMM parameters represent the first-order moments of the features, the FV encodes second-order moments of the features, roughly.\n",
+    "\n",
+    "Once we have the fisher vectors ready we will pass them through the SVM with the best parameters found under the \"Finetuning SVM\" part."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from yael.yael import ynumpy\n",
+    "from utils.DatasetManager import DatasetManager\n",
+    "from utils.Kernels import histogram_intersection_kernel\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import normalize\n",
+    "import pickle\n",
+    "import os\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_desc_path = \"/home/joan/workspace/MCV_M3/M3_project/SavePath/desc_fisher/train.dat\"\n",
+    "test_desc_path = \"/home/joan/workspace/MCV_M3/M3_project/SavePath/desc_fisher/test.dat\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_desc = pickle.load(open(train_desc_path, 'rb'))\n",
+    "test_desc = pickle.load(open(test_desc_path, 'rb'))\n",
+    "all_train_desc = np.vstack(train_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 64\n",
+    "n_sample = k * 5000\n",
+    "# choose n_sample descriptors at random\n",
+    "sample_indices = np.random.choice(all_train_desc.shape[0], n_sample)\n",
+    "sample = all_train_desc[sample_indices]\n",
+    "# until now sample was in uint8. Convert to float32\n",
+    "sample = sample.astype('float32')\n",
+    "# until now sample was in uint8. Convert to float32\n",
+    "gmm = ynumpy.gmm_learn(sample, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_fvs = []\n",
+    "for image_desc in train_desc:\n",
+    "    fv = ynumpy.fisher(gmm, image_desc, include = 'mu')\n",
+    "    train_fvs.append(fv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_fvs = []\n",
+    "for image_desc in test_desc:\n",
+    "    fv = ynumpy.fisher(gmm, image_desc, include = 'mu')\n",
+    "    test_fvs.append(fv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = np.array(train_fvs)\n",
+    "test_data = np.array(test_fvs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   5 | elapsed:  9.1min remaining: 13.7min\n",
+      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:  9.3min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=-1,\n",
+       "       param_grid={'kernel': [<function histogram_intersection_kernel at 0x7ff82c0d83d0>], 'C': [0.00134], 'gamma': ['scale']},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=5)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K_FOLDS = 5\n",
+    "PARAMETERS = {\n",
+    "    'C': [0.00134],\n",
+    "    'gamma': [\"scale\"],\n",
+    "    'kernel': [histogram_intersection_kernel]}\n",
+    "\n",
+    "cv = GridSearchCV(SVC(), param_grid=PARAMETERS, cv=K_FOLDS, n_jobs=-1, verbose=5)\n",
+    "cv.fit(train_data, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy score: 0.999468367889\n",
+      "Test accuracy score: 0.877323420074\n",
+      "Best params: {'kernel': <function histogram_intersection_kernel at 0x7ff82c0d83d0>, 'C': 0.00134, 'gamma': 'scale'}\n",
+      "\n",
+      "All results: {'std_train_score': array([0.00026587]), 'split4_test_score': array([0.86021505]), 'split0_train_score': array([0.99933422]), 'rank_test_score': array([1], dtype=int32), 'param_gamma': masked_array(data=['scale'],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object), 'split2_train_score': array([0.99933555]), 'std_score_time': array([1.92198117]), 'split4_train_score': array([0.99933731]), 'split2_test_score': array([0.88297872]), 'mean_score_time': array([52.24375176]), 'mean_fit_time': array([222.23916001]), 'param_kernel': masked_array(data=[<function histogram_intersection_kernel at 0x7ff82c0d83d0>],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object), 'param_C': masked_array(data=[0.00134],\n",
+      "             mask=[False],\n",
+      "       fill_value='?',\n",
+      "            dtype=object), 'std_test_score': array([0.01784812]), 'split1_train_score': array([0.99933422]), 'split0_test_score': array([0.8707124]), 'mean_test_score': array([0.88304094]), 'split3_train_score': array([1.]), 'params': [{'kernel': <function histogram_intersection_kernel at 0x7ff82c0d83d0>, 'C': 0.00134, 'gamma': 'scale'}], 'std_fit_time': array([2.27959434]), 'split3_test_score': array([0.888]), 'mean_train_score': array([0.99946826]), 'split1_test_score': array([0.91292876])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_score = cv.score(train_data, train_labels)\n",
+    "test_score = cv.score(test_data, test_labels)\n",
+    "        \n",
+    "print(\"Train accuracy score: {}\\nTest accuracy score: {}\\nBest params: {}\\n\".format(train_score, test_score, cv.best_params_))\n",
+    "print(\"All results: {}\".format(cv.cv_results_))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BLABLACAR"
+    "### Fisher conclusions:\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#code fisher"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conclusions"
+    "As we can see, results using Fisher vectors are pretty good reaching 87.73% of accuracy but not enough to surpas our best score yet (89.47%). \n",
+    "\n",
+    "However, we think that this result is pretty good compared with the vanilla SVM, which at best, work at 86.5%.\n",
+    "\n",
+    "For later studies we propose to finetune the SVM for the Fisher Vectors."
    ]
   },
   {
@@ -1041,23 +1215,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SUMMARY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#code final"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Conclusions"
+    "To conclude this notebook, we will expose what have work for us and which model performed better:\n",
+    "\n",
+    "1. We have seen that using Pyramid Dense SIFT works best than using vanilla Dense SIFT. Our implementation of Pyramid consist of dividing the image in equal parts and computing the Dense SIFT descriptors on them. \n",
+    "\n",
+    "2. We also consider using more than one scale when computing DenseSIFT as we have proven to be beneficial with scales of 8 and 16 pixels.\n",
+    "\n",
+    "3. When using SVM, setting a big number of clusters is beneficial.We think this is due to the fact that with more clusters SVM is able to construct better hyper cylinders or find the dimension where the data is completely separabable.\n",
+    "\n",
+    "4. We have seen that normalization can influence the results of the SVM, where the l1 showed better results than other normalization techniques. However, in our case, we noticed a drop in performance when using the vanilla SVM. \n",
+    "\n",
+    "5. When finetuning the SVM, we have study how the different parameters affect the performance of the SVM, concluding that:\n",
+    "    * The regularizer parameter change depending on the kernel used. For sigmoid for example, has to be set with values around 1, but with our implementation of histogram_intersection is better to use values around 1e-3. Setting this value higher produce an underscore and plateau.\n",
+    "    * Linear, Sigmoid and Histogram_Intersection were performing almost the same, with the only difference being that sigmoid seem to not overfit the training data. RBF kernel proven to be the worst kernel.\n",
+    "    * Tolerance value proven to be insignificant, as their effect was negligible as long as it value was lower than 2.\n",
+    "    \n",
+    "    \n",
+    "6. We tried to use Fisher Vectors instead of Bag of Visual Words but we didn't achieve to reach the best score obtained. On the other side, the addition of Fisher Vectors improved our results using the vanilla finetuned SVM by 1% (FinetunedSVM: 86,74%, Fisher-Vectors: 87,73%)\n",
+    "\n",
+    "Overall we have seen that SVM outperforms KNN (from 81.5% to 89.47%) and we want to highlight that improvement obtained from the finetuning was slighter than the one obtained by modifying the data (using Pyramid DenseSIFT, adding more scales to the SIFT descriptors, normalizing it and scaling it), as we passed from 86.7% to 87.67 finetuning the SVM while passing from 86.7% to 89.47 just changing the DenseSIFT to Pyramid DenseSIFT.\n",
+    "\n",
+    "The best model was obtained using:\n",
+    "\n",
+    "* Pyramid DenseSIFT dividing the image by 4 parts and using steps of 16 pixels and scales of 8 and 16.\n",
+    "* Using 896 clusters\n",
+    "* Scaling the data\n",
+    "* Using the Histogram Intersection\n",
+    "* Setting regularizer parameter (C) to 0.00134\n",
+    "\n",
+    "With this setting we obtained our best with 89.47% (Pyramid DenseSIFT graph)"
    ]
   }
  ],
