Pseudo code task3 and task5

--- a/Week2/SVM.ipynb
+++ b/Week2/SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,23 @@
     "dataset = DatasetManager('../Databases/MIT_split')\n",
     "train_img_paths, train_labels, test_img_paths, test_labels = dataset.load_dataset()\n",
     "SAVE_PATH = '../SavePath/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1881\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_desc))"
    ]
   },
   {
