Done all citations TODO

--- a/FinalReport/bibliography.bib
+++ b/FinalReport/bibliography.bib
@@ -39,3 +39,120 @@
   year={1988},
   publisher={IEEE}
 }
+
+@INPROCEEDINGS{790410,
+author={D. G. {Lowe}},
+booktitle={Proceedings of the Seventh IEEE International Conference on Computer Vision},
+title={Object recognition from local scale-invariant features},
+year={1999},
+volume={2},
+number={},
+pages={1150-1157 vol.2},
+keywords={object recognition;feature extraction;computational geometry;image matching;least squares approximations;local scale-invariant features;local image features;3D projection;inferior temporal cortex;primate vision;staged filtering approach;local geometric deformations;blurred image gradients;multiple orientation planes;nearest neighbor indexing method;candidate object matches;low residual least squares solution;unknown model parameters;robust object recognition;cluttered partially occluded images;computation time;Object recognition;Electrical capacitance tomography;Image recognition;Lighting;Neurons;Computer science;Reactive power;Filters;Programmable logic arrays;Layout},
+doi={10.1109/ICCV.1999.790410},
+ISSN={null},
+month={Sep.},}
+
+@article{article,
+author = {Zhang, Yin and Jin, Rong and Zhou, Zhi-Hua},
+year = {2010},
+month = {12},
+pages = {43-52},
+title = {Understanding bag-of-words model: A statistical framework},
+volume = {1},
+journal = {International Journal of Machine Learning and Cybernetics},
+doi = {10.1007/s13042-010-0001-0}
+}
+
+@INPROCEEDINGS{6920716,
+author={R. {Ramlee} and A. K. {Muda} and S. S. {Syed Ahmad}},
+booktitle={2013 13th International Conference on Intellient Systems Design and Applications},
+title={PCA and LDA as dimension reduction for individuality of handwriting in writer verification},
+year={2013},
+volume={},
+number={},
+pages={104-108},
+keywords={data analysis;document image processing;handwriting recognition;image classification;principal component analysis;PCA;LDA;handwriting individuality;principal component analysis;linear discriminant analysis;statistical data analysis;linear technique;dimension reduction approach;feature identification;handwritten document verification;writer verification process;classification process;Accuracy;Feature extraction;Data mining;Principal component analysis;Principal Component Analysis;Dimension Reduction;Linear Discriminant Analysis;individuality of Handwriting;Writer Verification},
+doi={10.1109/ISDA.2013.6920716},
+ISSN={2164-7151},
+month={Dec},}
+
+@article{10.1109/5254.708428,
+author = {Hearst, Marti A.},
+title = {Support Vector Machines},
+year = {1998},
+issue_date = {July 1998},
+publisher = {IEEE Educational Activities Department},
+address = {USA},
+volume = {13},
+number = {4},
+issn = {1541-1672},
+url = {https://doi.org/10.1109/5254.708428},
+doi = {10.1109/5254.708428},
+journal = {IEEE Intelligent Systems},
+month = jul,
+pages = {18–28},
+numpages = {11}
+}
+
+@inproceedings{imagenet_cvpr09,
+        AUTHOR = {Deng, J. and Dong, W. and Socher, R. and Li, L.-J. and Li, K. and Fei-Fei, L.},
+        TITLE = {{ImageNet: A Large-Scale Hierarchical Image Database}},
+        BOOKTITLE = {CVPR09},
+        YEAR = {2009},
+        BIBSOURCE = "http://www.image-net.org/papers/imagenet_cvpr09.bib"}
+        
+@article{DBLP:journals/corr/ZophVSL17,
+  author    = {Barret Zoph and
+               Vijay Vasudevan and
+               Jonathon Shlens and
+               Quoc V. Le},
+  title     = {Learning Transferable Architectures for Scalable Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1707.07012},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1707.07012},
+  archivePrefix = {arXiv},
+  eprint    = {1707.07012},
+  timestamp = {Mon, 13 Aug 2018 16:48:00 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/ZophVSL17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{0483bd9444a348c8b59d54a190839ec9,
+title = "Deep learning",
+abstract = "Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.",
+author = "Yann LeCun and Yoshua Bengio and Geoffrey Hinton",
+year = "2015",
+month = "5",
+day = "27",
+doi = "10.1038/nature14539",
+language = "English (US)",
+volume = "521",
+pages = "436--444",
+journal = "Nature Cell Biology",
+issn = "1465-7392",
+publisher = "Nature Publishing Group",
+number = "7553",
+}
+
+@inproceedings{10.5555/3045118.3045167,
+author = {Ioffe, Sergey and Szegedy, Christian},
+title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+year = {2015},
+publisher = {JMLR.org},
+booktitle = {Proceedings of the 32nd International Conference on International Conference on Machine Learning - Volume 37},
+pages = {448–456},
+numpages = {9},
+location = {Lille, France},
+series = {ICML’15}
+}
+
+@article{Shorten2019ASO,
+  title={A survey on Image Data Augmentation for Deep Learning},
+  author={Connor Shorten and Taghi M. Khoshgoftaar},
+  journal={Journal of Big Data},
+  year={2019},
+  volume={6},
+  pages={1-48}
+}
